--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       //]]>
     </script>
     <link rel="shortcut icon" href="/images/favicon.ico" />
-    <link rel="alternate" type="application/atom+xml" title="Blueness - articles" href="http://blog.sizhujay.me/articles.xml">
+    <link rel="alternate" type="application/atom+xml" title="Blueness - articles" href="http://sizhujay.me/articles.xml">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
@@ -52,7 +52,7 @@
                   <a href="mailto:blueness.d@gmail.com" title="Blueness"><img  src="/images/gravatar.jpg"  alt="Blueness" class="float-left"></a>
                   
                 <p class='copyright'>
-                  <a href="http://blog.sizhujay.me/articles.xml" title="Subscribe to feed"><img src="/images/feed.gif" style="border:none;padding:0;position:relative;top:3px;" /></a>
+                  <a href="http://sizhujay.me/articles.xml" title="Subscribe to feed"><img src="/images/feed.gif" style="border:none;padding:0;position:relative;top:3px;" /></a>
                   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, styled with <a href="http://www.styleshout.com/templates/preview/GrungeEra11/index.html" target="_blank">GrungeEra</a>.
                 </p>
               </div>	
