--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,102 +1,38 @@
 <!DOCTYPE html>
- 
 <html>
-  <head>
-    {% if page.title %}
-      <title>{{ page.title }} &bull;WebSite </title>
-    {% else %}
-      <title>Blueness</title>
-    {% endif %}
-    <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/stylesheets/GrungeEra.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css" media="all" />
-    <script src="/javascripts/jquery.js" type="text/javascript"></script>
-    <script src="/javascripts/soundmanager2.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      //<![CDATA[
-        soundManager.url = '/swf/'; 
-        soundManager.debugMode = false
-      //]]>
-    </script>
-    <link rel="shortcut icon" href="/images/favicon.ico" />
-    <link rel="alternate" type="application/atom+xml" title="Blueness - articles" href="http://sizhujay.me/articles.xml">
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  </head>
-  <body>
-    <div id="wrap">
-      <div id="header">
-        <a name="top"></a>
-        <div id="logo"><a href="/" title="">Blueness</a></div>
-        <p id="intro">
-          Personal site of Blueness
-        </p>
-      </div>
-      <div id="content-outer" class="clear">
-        <div id="content-wrap">
-          <div class="content">
-            <div class="post">
-              {{ content }}
-            </div>
-          </div>
-        </div>
-		 </div>
-      <div id="footer-outer" class="clear"><div id="footer-wrap">
-        <div class="content">	
-          <div class="columns">
-            <div class="col">
-              <h3>About</h3>
-                <p>
-                  <a href="mailto:blueness.d@gmail.com" title="Blueness"><img  src="/images/gravatar.jpg"  alt="Blueness" class="float-left"></a>
-                  
-                <p class='copyright'>
-                  <a href="http://sizhujay.me/articles.xml" title="Subscribe to feed"><img src="/images/feed.gif" style="border:none;padding:0;position:relative;top:3px;" /></a>
-                  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, styled with <a href="http://www.styleshout.com/templates/preview/GrungeEra11/index.html" target="_blank">GrungeEra</a>.
-                </p>
-              </div>	
-              <div class="col">
-                <h3>Search</h3>
-                <form id="quick-search" action="http://www.google.com/search" method="get">
-                  <p>
-                    <label for="qsearch">Search:</label>
-                    <input class="tbox" id="qsearch" type="text" name="q" value="Search..." title="Start typing and hit ENTER" onclick="this.value=''">
-                    <input name="sitesearch" type="hidden" value="rors.org" /> 
-                    <input class="btn" alt="Search" type="image" name="searchsubmit" title="Search" src="/images/search.gif">
-                  </p>
-                </form>	
-                
-                <h3>Archive </h3>
-                <div class="footer-list">
-                  <ul>
-                   {% for post in site.posts limit:30 %}
-                    <li>
-                      <a href="{{ post.url }}">
-                        {{ post.title }}
-                      </a>
-                    </li>
-                    {% endfor %}
-                  </ul>
-                </div>
-              </div>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-            <!-- columns ends -->	
-            </div>
+    <title>{{ site.name }} - {{ site.description }}</title>
+    <meta name="description" content="{{ site.meta_description}}" />
 
-          </div>
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- footer ends -->
-        </div>
-        </div>
-    <div/>
-    <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-    var pageTracker = _gat._getTracker("UA-1192097-4");
-    pageTracker._initData();
-    pageTracker._trackPageview();
-    </script>
-  </body>
+    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+    <!-- Customisation  -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+
+</head>
+<body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
+
+    {{ content }}
+    <footer class="site-footer clearfix">
+      <section class="copyright">
+        <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
+              {{date format="YYYY"}} &bull; All rights reserved.
+      </section>
+      <section class="poweredby">Made with Jekyll using 
+        <a href="http://github.com/rosario/kasper">Kasper theme</a>
+      </section>
+    </footer>
+    
+    <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
+    <script type="text/javascript" src="/assets/js/index.js"></script>
+
+</body>
 </html>
