--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'oryx';
+    var disqus_shortname = 'oryx2';
     
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
